// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`String regex and required validation 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,12 +5,18 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"antonio\\"
+       value=\\"\\"
      />
+     <br />
+     <div
+       style=\\"color: red;\\"
+     >
+       First name is required
+     </div>
      <button
        type=\\"submit\\"
      >
        Submit
      </button>"
`;

exports[`String regex and required validation 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,12 +5,18 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"antonio\\"
+       value=\\"wooga\\"
      />
+     <br />
+     <div
+       style=\\"color: red;\\"
+     >
+       First name must start with \\"wooga.name\\"
+     </div>
      <button
        type=\\"submit\\"
      >
        Submit
      </button>"
`;

exports[`String regex and required validation 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"antonio\\"
+       value=\\"wooga.name.antonio\\"
      />
      <button
        type=\\"submit\\"
      >
        Submit"
`;

exports[`String regex validation 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,12 +5,18 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"\\"
+       value=\\"antonio\\"
      />
+     <br />
+     <div
+       style=\\"color: red;\\"
+     >
+       First name must start with \\"wooga.name\\"
+     </div>
      <button
        type=\\"submit\\"
      >
        Submit
      </button>"
`;

exports[`String regex validation 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"\\"
+       value=\\"wooga.name antonio\\"
      />
      <button
        type=\\"submit\\"
      >
        Submit"
`;

exports[`String required validation 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,12 +5,18 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"antonio\\"
+       value=\\"\\"
      />
+     <br />
+     <div
+       style=\\"color: red;\\"
+     >
+       First name is required
+     </div>
      <button
        type=\\"submit\\"
      >
        Submit
      </button>"
`;

exports[`String required validation 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
      </label>
      <br />
      <input
        name=\\"firstName\\"
        type=\\"text\\"
-       value=\\"antonio\\"
+       value=\\"Wooga\\"
      />
      <button
        type=\\"submit\\"
      >
        Submit"
`;
